# DatabaseCompression

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
compression/: bitvector_compressed_column.h  dictionary_compressed_column.hpp
data/: float column  int column  string column
